Addapted docker syntax to new minergate-cli syntax

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,4 +4,4 @@ services:
   minergate_worker:
     restart: always
     image: transrian/docker-minergate-cli
-    command: --user my.mail@example.org -t 16 --xmr
+    command: --user my.mail@example.org --xmr 16
